# BLEDeck

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run-tests.bat  run-tests.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-personalized-firmware.yml  build-windows-app.yml  build-windows.yml  build.yml  tests.yml
debug/: protocol_decoder.py  test_protocol.py
docs/: ble_protocol_reference.md  hex_quick_reference.md  protocol_debugging.md  troubleshooting.md
enclosure/stl/: PushButton.stl
enclosure/stls/: BatteryLayer.stl  BatteryTop.stl  Bottom.stl
firmware/: .gitignore  README.md  custom_partitions.csv  platformio.ini
firmware/src/: configuration.h  credentials.h.example  images.h  main.cpp  menu.h  ota_manager.cpp  ota_manager.h  protocolparser.h  version.h
pcb/: README.md
pcb/bledeck/: .gitignore  bledeck.kicad_pcb  bledeck.kicad_prl  bledeck.kicad_pro  bledeck.kicad_sch  design-block-lib-table  fp-info-cache  fp-lib-table  sym-lib-table
simulator/: README.md  __init__.py  __main__.py  __version__.py  _context.py  ble_server.py  cli.py  command_handler.py  device_state.py  event_emitter.py  fake_bleak_client.py  requirements.txt
windows_app/: .gitignore  README.md  __version__.py  action_runner.py  app_settings.py  ble_client.py  ble_protocol.py  bledeck.spec  build.bat  command_safety.py  key_button.py  macro_dialog.py  macro_models.py  macro_player.py  macro_recorder.py  main.py  manual.md  profile_manager.py  profiles.json  requirements-dev.txt  requirements.txt  setup-dev.bat  setup-dev.sh  win32_utils.py
(+33 files in other folders)
